apps/sco-redirect/environments/hz/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sco-redirect
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: contour
  tls:
    - hosts:
        - sco.hz.metacpan.org
      secretName: sco-tls
  rules:
    - host: sco.hz.metacpan.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: sco-redirect
                port:
                  number: 80
